# vertex

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  run-mcp-docker.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docker/: Dockerfile.http  Dockerfile.stdio
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUSINESS_CASES.md  GETTING_STARTED.md  ROADMAP.md
docs/test-problems/: ADVANCED.md  ANALYSIS.md  COMBINATORIAL.md  DOMAIN-TEMPLATES.md  LINEAR-PROGRAMMING.md  MIXED-INTEGER-PROGRAMMING.md  NETWORK-OPTIMIZATION.md  SCHEDULING-ROUTING.md
docs/test-scenarios/: ADVANCED.md  ANALYSIS.md  COMBINATORIAL.md  DOMAIN-TEMPLATES.md  LINEAR-PROGRAMMING.md  MAINTENANCE.md  MIXED-INTEGER-PROGRAMMING.md  NETWORK-OPTIMIZATION.md  ROUTING_ADVANCED.md  SCHEDULING-ROUTING.md
src/vertex/: __init__.py  config.py  logging.py  metrics.py  server.py  types.py  validation.py
src/vertex/models/: __init__.py  linear.py  maintenance.py  mdp.py  mip.py  network.py  nonlinear.py  routing.py  scheduling.py  simulation.py  stochastic.py  tuning.py  viz.py
src/vertex/prompts/: __init__.py  linear.py  mip.py  network.py  scheduling.py  selection.py  sensitivity.py
src/vertex/solvers/: __init__.py  base.py  linear.py  maintenance.py  mdp.py  mip.py  network.py  nonlinear.py  routing.py  scheduling.py  simulation.py  stochastic.py  tuning.py
src/vertex/tools/: __init__.py  analysis.py  cp.py  linear.py  maintenance.py  mdp.py  mip.py  multiobjective.py  network.py  nonlinear.py  routing.py  scheduling.py  sensitivity.py  simulation.py  stochastic.py  tuning.py
src/vertex/tools/templates/: __init__.py  assignment.py  diet.py  facility.py  healthcare.py  inventory.py  knapsack.py  portfolio.py  production.py  supplychain.py  workforce.py
src/vertex/utils/: async_utils.py  visualization.py
tests/: test_analysis.py  test_cp.py  test_integration.py  test_linear.py  test_maintenance.py  test_mcp_protocol.py  test_mdp.py  test_mip.py  test_more_templates.py  test_multiobjective.py  test_network.py  test_nonlinear.py  test_routing.py  test_scheduling.py  test_simulation.py  test_solver_selection.py  test_stochastic.py  test_templates.py  test_tuning.py  test_visualization.py
