[project]
name = "vertex"
version = "0.1.0"
description = "Operations Research MCP Server for decision makers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.5",
    "mcp[cli]>=1.25.0",
    "numpy>=2.4.1",
    "ortools>=9.14.6206",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
]

[project.scripts]
vertex = "vertex.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vertex"]

[dependency-groups]
dev = ["ruff>=0.14.11"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["vertex"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
